code25_all/scala/15348612.txt
/Users/craig/myprojectdir/scala/build.sbt:9: error: object github is not a member of package com
seq(com.github.siasia.WebPlugin.webSettings :_*)
        ^
[error] Type error in expression
Project loading failed: (r)etry, (q)uit, (l)ast, or (i)gnore? 

